--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\PuckControl.Data.CE\packages.config" />
   <repository path="..\PuckControl.Domain\packages.config" />
+  <repository path="..\PuckControl.Engine\packages.config" />
   <repository path="..\PuckControl.Test\packages.config" />
   <repository path="..\PuckControl\packages.config" />
 </repositories>
