--- a/PuckControl.BlobTracking/PuckControl.BlobTracking.csproj
+++ b/PuckControl.BlobTracking/PuckControl.BlobTracking.csproj
@@ -72,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BlobBallTracker.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
