--- a/PuckControl/packages.config
+++ b/PuckControl/packages.config
@@ -1,9 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Common.Logging" version="2.0.0" targetFramework="net40" />
+  <package id="CSharp.GitHub" version="0.1.4500.22863" targetFramework="net40" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net40" />
   <package id="EntityFramework.SqlServerCompact" version="6.1.0" targetFramework="net40" />
   <package id="HelixToolkit" version="2014.2.13.1" targetFramework="net40" />
   <package id="HelixToolkit.Wpf" version="2014.2.13.1" targetFramework="net40" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net40" />
   <package id="NetSparkle" version="1.1.0" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="6.0.2" targetFramework="net40" />
+  <package id="Spring.Rest" version="1.1.0" targetFramework="net40" />
+  <package id="Spring.Social.Core" version="1.0.0" targetFramework="net40" />
 </packages>
