--- a/PuckControl.Games/PuckControl.Games.csproj
+++ b/PuckControl.Games/PuckControl.Games.csproj
@@ -35,7 +35,7 @@
     <CodeAnalysisRuleSet>..\..\..\..\Google Drive\Settings Files\Custom.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>keyFile.pfx</AssemblyOriginatorKeyFile>
